--- a/Flashcards.Shinigami/appsettings.json
+++ b/Flashcards.Shinigami/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "defaultConnection" : "Server=(localdb)\\MSSQLLocalDB;Database=Flashcards;Trusted_Connection=true;TrustServerCertificate=true"
+    "defaultConnection" : "Server=(localdb)\\MSSQLLocalDB;Database=master;Trusted_Connection=true;TrustServerCertificate=true"
   }
 }
